[OCMUI-1501] HCP: Additional Security Group(s) on Machine Pools Day2
