# src/types/insights-results-aggregator.v2/models/upgradeRisksPrediction.ts
@@ -1,0 +1,13 @@
+/* istanbul ignore file */
+/* tslint:disable */
+/* eslint-disable */
+
+import type { upgradeRisksPredictors } from './upgradeRisksPredictors';
+
+export type upgradeRisksPrediction = {
+  cluster_id: string;
+  last_checked_at?: string;
+  prediction_status: string;
+  upgrade_recommended?: boolean;
+  upgrade_risks_predictors?: upgradeRisksPredictors;
+};
